tests/machine/x/fs/inner_join.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/inner_join.fs(20,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (19:26). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/inner_join.fs(20,3): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (19:26). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/inner_join.fs(20,28): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon2    
The type 'obj' is not compatible with the type 'Anon2'

/workspace/mochi/tests/machine/x/fs/inner_join.fs(20,43): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon2    
The type 'obj' is not compatible with the type 'Anon2'

/workspace/mochi/tests/machine/x/fs/inner_join.fs(20,61): error FS1129: The type 'obj' does not contain a field 'orderId'

/workspace/mochi/tests/machine/x/fs/inner_join.fs(23,61): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon3    
The type 'obj' is not compatible with the type 'Anon3'

/workspace/mochi/tests/machine/x/fs/inner_join.fs(23,96): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon3    
The type 'obj' is not compatible with the type 'Anon3'

/workspace/mochi/tests/machine/x/fs/inner_join.fs(23,137): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon3    
The type 'obj' is not compatible with the type 'Anon3'
